--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <input type="currency" class="form-control" id="ctc" required>
                             <small class="text-danger code-ctc d-none">Required</small>
                         </div>
-                        <button type="submit" id="formButton" class="btn btn-primary mt-2"></button>
+                        <button type="button" id="formButton" class="btn btn-primary mt-2"></button>
                     </form>
                 </div>
             </div>
